1999-05-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d -_lispInLatticeObjects_:], 
	[Discrete2d -_lispOutLatticeObjects_:]): 
	Use pair for coordinates, not list.
	([Discrete2d -_lispOutLatticeValues_:]): Array encoding was reversed.
	([Discrete2d -hdf5In{Create}]): Uses group shallow encoding
	to separate ivars and lattice.  Implement deep loading.
	([Discrete2d -hdf5Deep:]): Implement.

1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d -setSizeX:Y:], [Discrete -createEnd]):
	Use raiseEvent macro instead of method invocation.
	([Discrete2d -lispInCreate:]): Move to creating phase.
	([Discrete2d -hdf5InCreate:]): Implement.
	([Discrete2d -hdf5In:]): Implement.
	([Discrete2d -_lispInLatticeValues_:], [Discrete2d
	-_lispOutLatticeObjects_:]): Don't use tempArray.
	([Discrete2d -_lispOutLatticeValues_:]): Don't gratuitously allocate
	scratch buffer.
	([Discrete2d -hdf5OutShallow:]): Implement

	* Discrete2d.h (Discrete2d):  -{{hdf5,lisp}{In,Out}}: Declare.

	* space.h (Discrete2d): Remove setUseObjects and setUseValues.

	* Discrete2d.m ([Discrete2d +createBegin:]): Remove.
	([Discrete2d -setUse{Objects,Values}]): Remove.
	([Discrete2d -_lispInAttr_:]): Remove.
	([Discrete2d -_lispInLatticeValues_:]): Renamed from
	_lispInAttrAsValues_.  Don't set (removed) useValues.
	([Discrete2d -_lispInLatticeObjects_:]): Renamed from
	_lispInAttrAsObjects_.  Don't set (removed) useObjects.
	([Discrete2d -_lispInLatticeObjects_:]): Don't call -_lispInAttr_:.
	([Discrete2d -_lispOutLatticeObjects_:]):
	([Discrete2d -_lispOutAttr_:anObject:atX:Y]): Removed.
	([Discrete2d -_lispOutLatticeObjects_:], [Discrete
	-_lispOutLatticeValues_:]): New methods.
	([Discrete2d -lispOutShallow:]): Use -lispOutVars:deep: and
	_lispOutLatticeValues_: (previous implementation threw an
	exception).
	([Discrete2d -lispOutDeep:]): Use -lispOutVars:deep: and
	_lispOutLatticeObjects:.
